feat: add data refresh logic